--- a/style/style.css
+++ b/style/style.css
@@ -36,7 +36,7 @@ body{
   padding: 0.3rem;
   /* design */
   border-radius: 10rem;
-  border: 2px solid rgba(255, 255, 255, 0.311);
+  border: 2px solid #ffffff4f;
   background-color: rgba(255, 255, 255, 0);
 }
 #user-input{
@@ -124,7 +124,7 @@ body{
   font-size: 0.9em;
   color: #bdc1c69d;
 
-  border-top: solid 5px rgb(32, 36, 91);
+  border-top: solid 5px #21255c;
 }
 
 
